  * iwlwifi: Disable QoS when connected to a non-QoS-capable AP
    (Closes: #578262)
  * [hppa] Revert "parisc: Set PCI CLS early in boot.", erroneously
    included in 2.6.32.13
  * [x86] Disable e_powersaver cpufreq driver as unsafe. It has already
    been blacklisted by cpufrequtils. The acpi-cpufreq driver can be used
    instead on some VIA C7 systems. (Closes: #566208)

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 18 May 2010 02:13:44 +0100

linux-2.6 (2.6.32-13) unstable; urgency=low

  [ Frederik Schueler ]
  * sparc: Fix use of uid16_t and gid16_t in asm/stat.h

  [ Moritz Muehlenhoff ]
  * Enable tomoyo (Closes: #562486)

  [ maximilian attems]
  * backport KVM: x86: Extend KVM_SET_VCPU_EVENTS with selective updates.
    (closes: #580652)
  * KEYS: find_keyring_by_name() can gain access to a freed keyring.
    CVE-2010-1437
  * hppa, sparc, powerpc disable BLK_DEV_CMD64X.
  * topconfig enable PATA_CMD64X. (closes: #580799)
  * x86: Disable CRYPTO_AES_NI_INTEL as it causes boot failures on T410.
  * Add stable 2.6.32.13:
    - [SCSI] Enable retries for SYNCRONIZE_CACHE commands to fix I/O error.
    - [SCSI] Retry commands with UNIT_ATTENTION sense codes to fix ext3/ext4
      I/O errors.
    - [SCSI] skip sense logging for some ATA PASS-THROUGH cdbs
      (Closes: #578129)
    - raid6: fix recovery performance regression.
    - raid456: Enable error-correction on singly-degraded RAID6
      (Closes: #581392)
    - r8169: fix broken register writes (Closes: #407217, #573007)
    - V4L/DVB: budget: Fix crash in case of failure to attach frontend
      (Closes: #575207)
  * drm/edid: Fix 1024x768@85Hz.

  [ Ben Hutchings ]
  * linux-base: Fix typo in disk relabelling code (Closes: #580467)
  * linux-base: Don't quote boot device name in elilo.conf
    (Closes: #580710; works-around: #581173)
  * rtl8192su: Add IDs for several more devices (Closes: #580740)
  * Add drm and sfc changes from stable 2.6.33.4