@@ -17,6 +17,9 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
     been blacklisted by cpufrequtils. The acpi-cpufreq driver can be used
     instead on some VIA C7 systems. (Closes: #566208)
 
+  [ Bastian Blank ]
+  * Update Xen patch.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 18 May 2010 02:13:44 +0100
 
 linux-2.6 (2.6.32-13) unstable; urgency=low
